tests/e2e/semantics/int_index.error
Error: syntax error in story at line 2, column 5

2|    b = a[0]
          ^^^

E0104: `int` can't be indexed with `0` of type `int`
